force-app/main/default/objects/ContentVersion/fields/sugati__CV_Vamoos_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__CV_Vamoos_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the file stored in the Vamoos</inlineHelpText>
    <label>Vamoos Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>