force-app/main/default/objects/ContentVersion/fields/sugati__Image_Source__c.field-meta.xml
<CustomField>
    <fullName>sugati__Image_Source__c</fullName>
    <defaultValue>(&quot;Internal&quot;)</defaultValue>
    <label>Image Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Pexels</fullName>
            </value>
            <value>
                <fullName>Pixabay</fullName>
            </value>
            <value>
                <fullName>WeTu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>