force-app/main/default/objects/ContentVersion/fields/sugati__SB_External_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_External_Image_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Image Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>